2009-02-11  Jürg Billeter  <j@bitron.ch>

	* vala/valaenum.vala:
	* vala/valainterface.vala:
	* vala/valastruct.vala:
	* vapigen/valagirparser.vala:

	Recognize c:type attributes in .gir

2009-02-10  Ryan Lortie  <desrt@desrt.ca>

	Bug 571169 – make floating references generic

	* gobject/valaccodebasemodule.vala:
	* vala/valainterface.vala:
	* vala/valaclass.vala:
	* vala/valaobjectcreationexpression.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valatypesymbol.vala:

	Add support for 'ref_sink_function' CCode attribute on classes. 
	Use this instead of hardcoding g_object_ref_sink() for
	GInitiallyUnowned.

	* vapi/gobject-2.0.vapi:

	Set ref_sink_function on InitiallyUnowned class.

2009-02-09  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedelegatemodule.vala:

	Emit delegate documentation to the C header files

2009-02-08  Jürg Billeter  <j@bitron.ch>

	* vala/valanamespace.vala:

	Drop experimental support for partial classes

2009-02-04  Jürg Billeter  <j@bitron.ch>

	* vapi/posix.vapi:

	Add bindings for signal functions and constants,
	patch by Michael Lauer

2009-02-04  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusclientmodule.vala:

	Remove D-Bus message filter when disposing proxy object

2009-02-04  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusmodule.vala:

	NULL-terminate arrays when demarshalling

2009-02-04  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusclientmodule.vala:

	Do not handle signals of irrelevant object paths

2009-02-04  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add GTestCase and GTestSuite bindings, patch by John Carr,
	fixes bug 570518

2009-02-02  Jürg Billeter  <j@bitron.ch>

	* vala/valacodewriter.vala:

	Write type_id attribute for GBoxed compact classes

	* vapi/gdk-2.0.vapi:
	* vapi/gtk+-2.0.vapi:
	* vapi/pango.vapi:

	Regenerated

2009-02-02  Jürg Billeter  <j@bitron.ch>

	* vala/valathrowstatement.vala:

	Fix crash on invalid error expressions

2009-02-01  Jürg Billeter  <j@bitron.ch>
